<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

<!--    Change visibility to "visible" to show ad banner.   -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_height="60dp"
        android:background="@color/white"
        android:visibility="gone"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_arrow_back"
            android:contentDescription="@string/exit" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_icon_scoring"
                android:contentDescription="@string/scoring_table"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAllCaps="true"
                android:text="@string/scoring"/>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/button_done"
            android:layout_width="75dp"
            android:layout_height="33dp"
            android:layout_gravity="center_vertical|end"
            android:background="@drawable/ic_btn_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/background"
                android:textSize="18sp"
                android:text="@string/done"
                />
        </FrameLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_sep_line"
            android:contentDescription="@string/half_of_the_line" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_sep_icon"
            android:contentDescription="@string/separation_line_icon" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_sep_line_2"
            android:contentDescription="@string/half_of_the_line"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:textColor="#A8FFFFFF"
            android:textStyle="bold"
            android:text="@string/score"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:layout_marginEnd="20dp"
            android:textColor="#A8FFFFFF"
            android:textStyle="bold"
            android:text="@string/game_time"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginEnd="20dp"
            android:textColor="#A8FFFFFF"
            android:textStyle="bold"
            android:text="@string/date"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#A8FFFFFF"
            android:textStyle="bold"
            android:text="@string/moves"/>
    </LinearLayout>
    <ListView
        android:id="@+id/list_entries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"/>
</LinearLayout>