<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">
    <TextView
        android:id="@+id/text_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/score"/>
    <TextView
        android:id="@+id/text_game_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.7"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/game_time"/>
    <TextView
        android:id="@+id/text_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/date"/>
    <TextView
        android:id="@+id/text_moves"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/moves"/>
</LinearLayout>